codegen/ui_tests/rhai_fn_index_getter_return.stderr
error: index getter must return a value
  --> ui_tests/rhai_fn_index_getter_return.rs:13:9
   |
13 |     pub fn test_fn(input: &mut Point, i: f32) {
   |         ^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `test_module`
  --> ui_tests/rhai_fn_index_getter_return.rs:23:8
   |
23 |     if test_module::test_fn(&mut n, 5.0) {
   |        ^^^^^^^^^^^ use of unresolved module or unlinked crate `test_module`
   |
   = help: if you wanted to use a crate named `test_module`, use `cargo add test_module` to add it to your `Cargo.toml`
